# membridge

./: .disclosure-denylist.example.txt  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml
claude_ui/: db.py  server.py  summariser.py
claude_ui/static/: app.js  index.html
commands/: membridge-archive.md  membridge-context.md  membridge-link.md  membridge-note.md  membridge-recall.md  membridge-recover-worktree.md  membridge-rename.md  membridge-summarize.md  membridge-tag.md  slides.md  summarize.md
context/: design.md
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODING_STANDARDS.md  COVERAGE.md  RELEASES.md  tdd-session-links.md
docs/adr/: 001-session-summarization-strategy.md  001-ui-filter-model.md  002-session-summary-architecture.md  003-membridge-summarize-delta.md  004-docker-host-split.md  005-slash-command-file-polling.md  006-three-hook-design.md  007-vertex-adc-credentials.md  008-iterm-session-uuid.md  009-iterm-tab-naming.md  010-session-state-machine.md  011-notification-hook.md  012-drop-docker-native-process.md  013-claude-code-hook-capabilities.md
docs/ideas/: README.md  session-reply.md  session-settings.md  telegram-mobile-reply.md
docs/presentations/: membridge-slides.html  slides-styles.html  slides-theme-example.css
hooks/: claude_ui_heartbeat.sh  claude_ui_notification.sh  claude_ui_stop.sh  claude_ui_tool_batch.sh  claude_ui_tool_use.sh
membridge/: db.py  focus.py  server.py  summariser.py
membridge/static/: app.js  index.html
scripts/: README.md  _iterm2_query.py  backfill.py  backfill_descriptions.py  disclosure_scan.py  focus_server.py  install.sh  run.sh  suggest_resumes.py  sync_iterm_tabs.py
tests/: test_db.py  test_disclosure_scan.py  test_focus.py  test_server.py  test_summariser.py
