[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic[vertex]>=0.40",
]

[project.scripts]
membridge = "membridge.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["membridge*"]
